	list of a rejected token has no owners or cannot be initialized.
	(s_recognize)  Recognize the ID of an existing session.

	* lib/Mj/Access.pm:  (list_access_check)  Do not perform
	"mismatch" or "posing" comparisons for two invalid addresses.

	* lib/Mj/CommandProps.pm:  The "force" command mode can be
	used with any variant of the put command.

	* lib/Mj/Format.pm:  The cgidata request element will be
	supplied directly by each CGI program.
	(qescape)  Convert special characters in a string into
	a format acceptable for a URL query string.

	* lib/Mj/List.pm:  (get_post_data, post_add)  Cope with
	invalid author addresses.  Thanks to Brock Rozen.

	* lib/Mj/Parser.pm:  (parse_part)  Improve error messages
	for the "approve" command.

	* lib/Mj/Token.pm:  (t_accept)  Check list validity.
	(_make_tokendb, _make_latchkeydb)  Improve error checking.
	(gen_latchkey)  Return expiration time if an array is
	requested.

2002-05-16  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Mj/Parser.pm (parse_part): Fix a couple of undef warnings.

	* bin/mj_queuerun (run_queue): Perform date sorting differently to
	guard against warnings when queue files are deleted by another
	process.
	
2002-05-11  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* bin/mj_queuerun: Add commented block to enable backtraces for
	warnings.

2002-05-10  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* bin/mj_shell (tempfile): Include directory name in error
	message.
	
2002-05-08  Michael Yount <csf@moscow.com>

	* t/*.t  Change "perl-latest" to "perl" in test files to 
	avoid errors from recent versions of Test::Harness.
	Thanks to Deb Heller-Evans.

2002-05-07  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Mj/BounceParser.pm (parse_compuserve, parse_compuserve2):
	Make sure that there actually is a From: header.

2002-05-06  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Mj/Deliver/Dest.pm (_gen_bounces): New function: generate a
	bounce for each failed address.